project/tests/in_progress/for_main/bad/argc_argv/argc_argv02.c
#include <stdio.h>

int main(int arg_number, char** arguments) {
  printf("%d\n", arg_number);
  return 0;
}
